BUG: #32007 - Edit account - the title overrides the text so edit is not visible

--- a/root/src/main/webapp/css/account/myAccount.css
+++ b/root/src/main/webapp/css/account/myAccount.css
@@ -1,6 +1,7 @@
 
 #myAccountContainer{
     margin: 0 50px;
+    padding-top: 100px;
 }
 
 .fixed + #myAccountContainer{
